fix: Adjust nav item, tag element heights, align text vertically

--- a/website/css/pre.styles.css
+++ b/website/css/pre.styles.css
@@ -32,6 +32,11 @@ body {
 	padding: 5px;
 	border-radius: 5px;
 	cursor: pointer;
+	display: flex;
+}
+
+.nav-item span {
+	height: 20px;
 }
 
 .topic-cont {
@@ -70,6 +75,13 @@ body {
 	font-weight: bold;
 	margin-left: 5px;
 	line-height: 2;
+	height: 24px;
+	padding: 1px 5px 0 5px;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
 }
 
 .topic-title {
