--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -49,6 +49,13 @@ body {
 	padding: 5px;
 	border-radius: 5px;
 	cursor: pointer;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.nav-item span {
+	height: 20px;
 }
 
 .topic-cont {
@@ -111,6 +118,23 @@ body {
 	font-weight: bold;
 	margin-left: 5px;
 	line-height: 2;
+	height: 24px;
+	padding: 1px 5px 0 5px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-ms-flex-flow: row nowrap;
+	flex-flow: row nowrap;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-ms-flex-line-pack: center;
+	align-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
 }
 
 .topic-title {
